--- a/ChocolateyExplorer.WPF/Views/Packages.xaml
+++ b/ChocolateyExplorer.WPF/Views/Packages.xaml
@@ -72,9 +72,9 @@
                 </TreeView.ItemTemplate>
             </TreeView>
             <StatusBar Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" >
-                <Button Content="Load More" HorizontalAlignment="Right" Command="{Binding LoadMorePackagesCommand, Mode=OneWay}"  />
+                <Button Content="Load More" HorizontalAlignment="Right" Command="{Binding LoadMorePackagesCommand, Mode=OneWay}" Margin="0,0,5,0"  />
             </StatusBar>
-            <ScrollViewer Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Auto" Padding="0,0,5,0" Grid.Row="0" Grid.RowSpan="2">
+            <ScrollViewer Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Auto" Padding="0,0,5,0" Grid.Row="0" Grid.RowSpan="2" Margin="0,0,0,5">
                 <StackPanel>
                     <StackPanel Style="{StaticResource StackedInformation}" Orientation="Vertical">
                         <StackPanel>
