--- a/ChocolateyExplorer.WPF/App.xaml
+++ b/ChocolateyExplorer.WPF/App.xaml
@@ -71,6 +71,9 @@
             <PathGeometry x:Key="AddIconData">
                 F1 M 35,19L 41,19L 41,35L 57,35L 57,41L 41,41L 41,57L 35,57L 35,41L 19,41L 19,35L 35,35L 35,19 Z
             </PathGeometry>
+            <PathGeometry x:Key="AddMultipleIconData">
+                F1 M 39,46L 46,46L 46,39L 51,39L 51,46L 58,46L 58,51L 51,51L 51,58L 46,58L 46,51L 39,51L 39,46 Z M 31,25L 38,25L 38,18L 43,18L 43,25L 50,25L 50,30L 43,30L 43,37L 38,37L 38,30L 31,30L 31,25 Z M 18,39L 25,39L 25,32L 30,32L 30,39L 37,39L 37,44L 30,44L 30,51L 25,51L 25,44L 18,44L 18,39 Z
+            </PathGeometry>
             <PathGeometry x:Key="MinusIconData">
                 F1 M 19,38L 57,38L 57,44L 19,44L 19,38 Z
             </PathGeometry>
