--- a/ChocolateyExplorer.WPF/Views/Packages.xaml
+++ b/ChocolateyExplorer.WPF/Views/Packages.xaml
@@ -72,7 +72,7 @@
                 </TreeView.ItemTemplate>
             </TreeView>
             <StatusBar Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" >
-                <Button Content="Load More" HorizontalAlignment="Right" Command="{Binding LoadMorePackagesCommand, Mode=OneWay}" Margin="0,0,5,0"  />
+                <mui:ModernButton IconData="{DynamicResource AddMultipleIconData}" Content="Load More" HorizontalAlignment="Right" Command="{Binding LoadMorePackagesCommand, Mode=OneWay}" Margin="0,0,5,0"  />
             </StatusBar>
             <ScrollViewer Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Auto" Padding="0,0,5,0" Grid.Row="0" Grid.RowSpan="2" Margin="0,0,0,5">
                 <StackPanel>
@@ -109,8 +109,10 @@
                         <TextBlock Text="{Binding SelectedPackage.Description}" TextWrapping="Wrap" Style="{DynamicResource Description}" />
                         <Label Content="Release Notes" Style="{DynamicResource Title}" />
                         <TextBlock Text="{Binding SelectedPackage.ReleaseNotes}" TextWrapping="Wrap" Style="{DynamicResource Description}" />
-                        <Button Content="Install" Command="{Binding InstallPackageCommand}" CommandParameter="{Binding SelectedPackage}" Margin="0,10,0,10" />
-                        <Button Content="Add to Install List" Command="{Binding AddToInstallListCommand}" CommandParameter="{Binding SelectedPackage}" Margin="0,10,0,10" />
+                        <StackPanel>
+                            <mui:ModernButton IconData="{DynamicResource AddIconData}" Content="Install" Command="{Binding InstallPackageCommand}" CommandParameter="{Binding SelectedPackage}" Margin="10,10,0,10" />
+                            <mui:ModernButton IconData="{DynamicResource AddMultipleIconData}" Content="Add to Install List" Command="{Binding AddToInstallListCommand}" CommandParameter="{Binding SelectedPackage}" Margin="10,10,0,10" />
+                        </StackPanel>
                     </StackPanel>
                     <DockPanel Width="Auto" LastChildFill="True">
                         <Label Content="Install Arguments" Style="{DynamicResource Title}" DockPanel.Dock="Left" />
