--- a/ChocolateyExplorer.WPF/Views/Packages.xaml
+++ b/ChocolateyExplorer.WPF/Views/Packages.xaml
@@ -63,6 +63,7 @@
                 <TreeView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Versions}">
                         <StackPanel Orientation="Horizontal">
+                            <Image Height="20" Width="20" Source="{Binding IconLink}" Stretch="Uniform" />
                             <TextBlock Text="{Binding Title}" FontWeight="Bold" Margin="0,0,5,0" />
                             <TextBlock Text="{Binding Id}" />
                         </StackPanel>
@@ -82,7 +83,8 @@
                     <StackPanel Style="{StaticResource StackedInformation}" Orientation="Vertical">
                         <StackPanel>
                             <Label Content="Id" Style="{DynamicResource Title}" />
-                            <Label Content="{Binding SelectedPackage.Id}"/>
+                            <Label Content="{Binding SelectedPackage.Id}" VerticalAlignment="Top"/>
+                            <Image Source="{Binding SelectedPackage.IconLink}" Height="50" Width="50" HorizontalAlignment="Right" />
                         </StackPanel>
                         <StackPanel>
                             <Label Content="Title" Style="{DynamicResource Title}" />
