--- a/ChocolateyExplorer.WPF/Views/Packages.xaml
+++ b/ChocolateyExplorer.WPF/Views/Packages.xaml
@@ -63,7 +63,7 @@
                 <TreeView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Versions}">
                         <StackPanel Orientation="Horizontal">
-                            <Image Height="20" Width="20" Source="{Binding IconLink}" Stretch="Uniform" />
+                            <Image Height="20" Width="20" Source="{Binding IconLink}" Stretch="Uniform" Margin="0,0,5,0" />
                             <TextBlock Text="{Binding Title}" FontWeight="Bold" Margin="0,0,5,0" />
                             <TextBlock Text="{Binding Id}" />
                         </StackPanel>
@@ -84,7 +84,6 @@
                         <StackPanel>
                             <Label Content="Id" Style="{DynamicResource Title}" />
                             <Label Content="{Binding SelectedPackage.Id}" VerticalAlignment="Top"/>
-                            <Image Source="{Binding SelectedPackage.IconLink}" Height="50" Width="50" HorizontalAlignment="Right" />
                         </StackPanel>
                         <StackPanel>
                             <Label Content="Title" Style="{DynamicResource Title}" />
