--- a/ChocolateyExplorer.WPF/Views/Packages.xaml
+++ b/ChocolateyExplorer.WPF/Views/Packages.xaml
@@ -56,7 +56,7 @@
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="40" />
             </Grid.RowDefinitions>
-            <TreeView ItemsSource="{Binding Packages}" Grid.Column="0" Grid.Row="0"  IsEnabled="{Binding CanSelectPackage}" Margin="0,0,10,0">
+            <TreeView ItemsSource="{Binding Packages}" Grid.Column="0" Grid.Row="0"  IsEnabled="{Binding CanSelectPackage}" Margin="0,0,10,0" TreeViewItem.Selected="TreeViewItem_OnItemSelected">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="SelectedItemChanged">
                         <cmd:EventToCommand Command="{Binding SetSelectedPackageCommand}" PassEventArgsToCommand="True" />
