--- a/ChocolateyExplorer.WPF/Views/InstallList.xaml
+++ b/ChocolateyExplorer.WPF/Views/InstallList.xaml
@@ -35,6 +35,7 @@
         </StatusBar>
         <ViewModel:Console DockPanel.Dock="Bottom" Height="200" />
         <StatusBar DockPanel.Dock="Bottom" HorizontalAlignment="Right" >
+            <mui:ModernButton IconData="{DynamicResource SaveIconData}" Content="Save as Setup Script" HorizontalAlignment="Right" Margin="0,0,5,0" Click="SaveSetupScriptClick" Command="{Binding SaveSetupScriptCommand}" />
             <mui:ModernButton IconData="{DynamicResource RemoveIconData}" Content="Cancel" HorizontalAlignment="Right" Command="{Binding CancelInstallCommand}" Margin="0,0,5,0" Visibility="{Binding IsWorking, Converter={StaticResource BooleanToVisibilityConverter}}"  />
             <mui:ModernButton IconData="{DynamicResource AddMultipleIconData}" Content="Install Packages" HorizontalAlignment="Right" Command="{Binding InstallPackagesCommand}" Margin="0,0,5,0"  />
         </StatusBar>
